// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon ui default: Icon => ui => default 1`] = `
<i
  className="icon material-icons"
  onClick={[Function]}
>
  alarm
</i>
`;

exports[`Icon ui is clickable: Icon => ui => is clickable 1`] = `
<i
  className="icon material-icons clickable"
  onClick={[Function]}
>
  alarm
</i>
`;

exports[`Icon ui is disabled: Icon => ui => is disabled 1`] = `
<i
  className="icon material-icons icon--disabled"
  onClick={[Function]}
>
  alarm
</i>
`;

exports[`Icon ui is enabled: Icon => ui => is enabled 1`] = `
<i
  className="icon material-icons"
  onClick={[Function]}
>
  alarm
</i>
`;

exports[`Icon ui is not clickable: Icon => ui => is not clickable 1`] = `
<i
  className="icon material-icons"
  onClick={[Function]}
>
  alarm
</i>
`;

exports[`Icon ui with className: Icon => ui => with className 1`] = `
<i
  className="icon text-danger material-icons"
  onClick={[Function]}
>
  alarm
</i>
`;

exports[`Icon ui with color: Icon => ui => with color 1`] = `
<i
  className="icon material-icons text-danger"
  id="1337"
  onClick={[Function]}
>
  alarm
</i>
`;

exports[`Icon ui with id: Icon => ui => with id 1`] = `
<i
  className="icon material-icons"
  id="1337"
  onClick={[Function]}
>
  alarm
</i>
`;

exports[`index should contain exports 1`] = `
Object {
  "Icon": [Function],
}
`;
